--- a/templates/parameter/updateCategory.html.twig
+++ b/templates/parameter/updateCategory.html.twig
@@ -1,10 +1,10 @@
 {% extends "recipe/index.html.twig" %}
 
-{% block title %} Créer une unité {% endblock %}
+{% block title %} Mettre à jour une catégorie {% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
 	<link rel="stylesheet" href="{{ asset('css/header.css') }}" />
-	<link rel="stylesheet" href="{{ asset('css/addUnit.css') }}" />
+	<link rel="stylesheet" href="{{ asset('css/updateCategory.css') }}" />
 {% endblock %}
 
 {% block body %}
@@ -108,7 +108,7 @@
 		</nav>
 	</header>
 	<main>
-		<h1 id="title" class="text-center mt-5 text-white fs-2">Créer une unité</h1>
+		<h1 id="title" class="text-center mt-5 text-white fs-2">Mettre à jour une catégorie</h1>
 
 		{{ form_start(form) }}
 
@@ -117,8 +117,8 @@
 			{{ form_errors(form.name) }}
 
 			<div class="d-flex justify-content-around mt-3">
-				<a href="{{ path('recipe_details', { 'id' : id }) }}" class="btn btn-sm btn-outline-warning">Annuler</a>
-				<button type="submit" class="btn btn-sm btn-outline-warning">Créer</button>
+				<a href="{{ path('parameters') }}" class="btn btn-sm btn-outline-warning">Annuler</a>
+				<button type="submit" class="btn btn-sm btn-outline-warning">Modifier</button>
 			</div>
 
 		{{ form_end(form) }}
