--- a/templates/parameter/updateCookingType.html.twig
+++ b/templates/parameter/updateCookingType.html.twig
@@ -1,17 +1,17 @@
 {% extends "recipe/index.html.twig" %}
 
-{% block title %} Créer une catégorie {% endblock %}
+{% block title %} Mettre à jour un type de cuisson {% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
 	<link rel="stylesheet" href="{{ asset('css/header.css') }}" />
-	<link rel="stylesheet" href="{{ asset('css/addCategory.css') }}" />
+	<link rel="stylesheet" href="{{ asset('css/updateCookingType.css') }}" />
 {% endblock %}
 
 {% block body %}
 	<header class="bg-dark">
 		<nav class="row m-0 d-flex align-items-center">
 			<a class="col-1" href="{{ path('home') }}">
-				<img src="images/re7-logo.png" alt="logo" />
+				<img src="../images/re7-logo.png" alt="logo" />
 			</a>
 			<div class="col-10 align-items-center desktopNav">
 				{# Desktop nav #}
@@ -108,7 +108,7 @@
 		</nav>
 	</header>
 	<main>
-		<h1 id="title" class="text-center mt-5 text-white fs-2">Créer une catégorie</h1>
+		<h1 id="title" class="text-center mt-5 text-white fs-2">Mettre à jour un type de cuisson</h1>
 
 		{{ form_start(form) }}
 
@@ -117,8 +117,8 @@
 			{{ form_errors(form.name) }}
 
 			<div class="d-flex justify-content-around mt-3">
-				<a href="{{ path('add_recipe') }}" class="btn btn-sm btn-outline-warning">Annuler</a>
-				<button type="submit" class="btn btn-sm btn-outline-warning">Créer</button>
+				<a href="{{ path('parameters') }}" class="btn btn-sm btn-outline-warning">Annuler</a>
+				<button type="submit" class="btn btn-sm btn-outline-warning">Modifier</button>
 			</div>
 
 		{{ form_end(form) }}
