--- a/templates/shopping/index.html.twig
+++ b/templates/shopping/index.html.twig
@@ -140,7 +140,7 @@
                                 {{ food.quantity }}
                             </div>
                             <div class="col-3 d-flex justify-content-center">
-                                {{ food.unit }}
+                                {{ food.unit.name }}
                             </div>
                         </div>
                     {% endfor %}
