--- a/templates/shopping/pdf.html.twig
+++ b/templates/shopping/pdf.html.twig
@@ -41,7 +41,7 @@
 								{{ row.food.name }}
 							</td>
 							<td class="d-flex justify-content-center">
-								{{ row.quantity }} {{ row.unit }}
+								{{ row.quantity }} {{ row.unit.name }}
 							</td>
 						</tr>
 					{% endfor %}
