--- a/templates/recipe/updateRecipe.html.twig
+++ b/templates/recipe/updateRecipe.html.twig
@@ -115,8 +115,8 @@
 			{{ form_label(form.name, 'Nom') }}
 			{{ form_widget(form.name) }}
 
-			{{ form_label(form.type, 'Type') }}
-			{{ form_widget(form.type) }}
+			{{ form_label(form.recipeType, 'Type') }}
+			{{ form_widget(form.recipeType) }}
 
 			{{ form_label(form.category, 'Catégorie') }}
 			{{ form_widget(form.category) }}
