Add meta to pdf template

--- a/templates/shopping/pdf.html.twig
+++ b/templates/shopping/pdf.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block meta %}
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+{% endblock %}
+
 {% block title %}Liste de courses PDF{% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
