hide useless scroll bar in home page

--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -2,7 +2,7 @@ main {
 	height: calc(100vh - 80px);
 	background-color: #212528;
 	color: white;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 .recipeContainer {
