hide scrollbars in foods page

--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -147,3 +147,14 @@ select {
 		width: 30vw;
 	}
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#recipesSection::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+#recipesSection {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+}
