--- a/public/css/foods.css
+++ b/public/css/foods.css
@@ -3,12 +3,13 @@ main {
 	background-color: #212528;
 	color: white;
 	width: 100vw;
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
-.foodRowsContainer {
+.foodsSection {
 	max-height: 35vh;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 #alertContainer {
@@ -125,4 +126,15 @@ label {
 	.formSection {
 		margin: 0;
 	}
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.foodsSection::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.foodsSection {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
 }
