--- a/public/css/parameters.css
+++ b/public/css/parameters.css
@@ -40,3 +40,14 @@ li {
 		justify-content: center;
 	}
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#mainRow > div::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+#mainRow > div {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+}
