--- a/public/css/shopping.css
+++ b/public/css/shopping.css
@@ -2,12 +2,13 @@ main {
 	height: calc(100vh - 80px);
 	background-color: #212528;
 	color: white;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 #listSection {
 	max-height: 70vh;
 	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 #planningSelect {
@@ -97,4 +98,15 @@ main {
 		font-size: 20px;
 		margin-top: 25px
 	}
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#listSection::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+#listSection {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
 }
