--- a/templates/parameter/addSection.html.twig
+++ b/templates/parameter/addSection.html.twig
@@ -111,7 +111,7 @@
 			{{ form_errors(form.name) }}
 
 			<div class="d-flex justify-content-around mt-3">
-				<a href="{{ path('foods') }}" class="btn btn-sm btn-outline-warning">Annuler</a>
+				<a href="{{ path('parameters') }}" class="btn btn-sm btn-outline-warning">Annuler</a>
 				<button type="submit" class="btn btn-sm btn-outline-warning">Créer</button>
 			</div>
 
