--- a/public/css/recipeDetails.css
+++ b/public/css/recipeDetails.css
@@ -61,3 +61,14 @@ select {
 		font-size: 20px;
 	}
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.recipeFoodsSection::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.recipeFoodsSection {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+}
