--- a/templates/recipe/recipeDetails.html.twig
+++ b/templates/recipe/recipeDetails.html.twig
@@ -132,7 +132,7 @@
 		<section class="recipeFoodsSection">
 			{% for food in foods %}
 				<div class="row mb-2">
-					<div class="col-5 d-flex justify-content-center">{{ food.foodName }}</div>
+					<div class="col-5 d-flex justify-content-center">{{ food.food.name }}</div>
 					<div class="col-2 d-flex justify-content-center">{{ food.quantity }}</div>
 					<div class="col-2 d-flex justify-content-center">{{ food.unit.name }}</div>
 					<div class="col-2 d-flex justify-content-between align-items-center">
