Add reference in recipe entity (add-recipe form, recipe details and updateRecipe form are also updated)

--- a/public/css/addRecipe.css
+++ b/public/css/addRecipe.css
@@ -24,12 +24,13 @@ li {
 }
 
 #recipeNameContainer {
-	max-height: 20px;
-	background-color: crimson;
+	width: 50%;
+	margin: auto;
 }
 
 #recipeInfosContainer {
 	margin: auto;
+	margin-top: 35px;
 }
 
 #recipeInfosContainer {
@@ -75,7 +76,6 @@ li {
 @media screen and (min-width: 1400px) {
 	#recipeInfosContainer {
 		width: 40vw;
-		margin-top: 35px;
 	}
 
 	input,
