--- a/templates/recipe/updateRecipe.html.twig
+++ b/templates/recipe/updateRecipe.html.twig
@@ -115,6 +115,9 @@
 			{{ form_label(form.name, 'Nom') }}
 			{{ form_widget(form.name) }}
 
+			{{ form_label(form.reference, 'Référence') }}
+			{{ form_widget(form.reference) }}
+
 			{{ form_label(form.recipeType, 'Type') }}
 			{{ form_widget(form.recipeType) }}
 
