--- a/templates/recipe/recipeDetails.html.twig
+++ b/templates/recipe/recipeDetails.html.twig
@@ -116,6 +116,7 @@
 				</svg>
 			</a>
 		</h2>
+		<p class="text-warning text-center mb-3 recipeInfo">Référence : <span class="text-white">{{ recipe.reference }}</span></p>
 		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Type : </span>{{ recipe.recipeType.name }}</p>
 		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Catégorie : </span>{{ recipe.category.name }}</p>
 		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Cuisson : </span>{{ recipe.cookingType.name }}</p>
