--- a/templates/shopping/index.html.twig
+++ b/templates/shopping/index.html.twig
@@ -120,7 +120,7 @@
         </div>
         <section class="row row-cols-1 row-cols-lg-2 mt-5">
             {# shopping list #}
-            <div class="col d-flex flex-column align-items-center">
+            <div class="col d-flex flex-column align-items-center mb-3">
                 <h2 class="text-center fs-5 mb-4">Courses du planning</h2> 
                 <section id="listSection" class="mb-3">
                     <div class="row mb-3 border-bottom border-warning pb-3">
@@ -153,7 +153,14 @@
             </div>
             {# bonus #}
             <div class="col d-flex flex-column align-items-center">
-                <h2 class="text-center fs-5 mb-4">Suppléments</h2> 
+                <h2 class="text-center fs-5 mb-4">
+                    Suppléments
+                    <a href="{{ path('clean_bonus', { 'bonusOwner' : planningOwner }) }}" class="ms-3" onclick="return confirm('Vous êtes sur le point de nettoyer tous vos suppléments, êtes-vous sûre ?')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-stars text-danger" viewBox="0 0 16 16">
+                            <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828l.645-1.937zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.734 1.734 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.734 1.734 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.734 1.734 0 0 0 3.407 2.31l.387-1.162zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L10.863.1z"/>
+                        </svg>
+                    </a> 
+                </h2> 
                 <section id="bonusSection" class="mb-3">
                     <div class="row mb-3 border-bottom border-warning pb-3">
                         <div class="col-4 text-warning d-flex justify-content-center">Aliment</div>
