Hide bonus scrollbar in shopping

--- a/public/css/shopping.css
+++ b/public/css/shopping.css
@@ -182,12 +182,14 @@ select {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-#listSection::-webkit-scrollbar {
+#listSection::-webkit-scrollbar,
+#bonusSection::-webkit-scrollbar {
 	display: none;
 }
   
 /* Hide scrollbar for IE, Edge and Firefox */
-#listSection {
+#listSection,
+#bonusSection {
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
 }
