--- a/templates/shopping/index.html.twig
+++ b/templates/shopping/index.html.twig
@@ -139,7 +139,7 @@
                                     {{ food.food.name }}
                                 </div>
                                 <div class="col-3 d-flex justify-content-center">
-                                    {{ food.quantity }}
+                                    {{ food.quantity|number_format(2) }}
                                 </div>
                                 <div class="col-3 d-flex justify-content-center">
                                     {{ food.unit.name }}
